[bumpversion]
current_version = 2.4.6-1
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)\-(?P<build>\d+)
serialize = {major}.{minor}.{patch}-{build}
commit = True
tag = True

[bumpversion:file:src/makei/__init__.py]

[metadata]
name = bob
license_files = LICENSE

[flake8]
max-line-length = 88
exclude =
  ./build,
  venv,
enable-extensions = G

[tool:pytest]
addopts = -r aR --color=yes
xfail_strict = True

[pylint.FORMAT]
max-line-length = 123

[pylint]
disable = missing-docstring,locally-disabled
