[bumpversion]
current_version = 2.4.15
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
serialize = {major}.{minor}.{patch}
commit = True
tag = True

[bumpversion:file:src/makei/__init__.py]

[metadata]
name = bob
license_files = LICENSE

[flake8]
max-line-length = 120
exclude = 
	./build,
	venv,
enable-extensions = G

[tool:pytest]
addopts = -r aR --color=yes
xfail_strict = True

[pylint.FORMAT]
max-line-length = 120

[pylint]
disable = missing-docstring,locally-disabled
good-names = i,j,k,ex,Run,_,f,p,d,e,fd
